--- a/default.conf
+++ b/default.conf
@@ -1,9 +1,7 @@
 <VirtualHost *:80>
-    ServerName localhost
-    # Set the document root
+    ServerName capslock.woven.design
     DocumentRoot "/var/www/html"
   <Directory "/var/www/html">
-    # Allow overriding the default configuration via `.htaccess`
     AllowOverride All
   </Directory>
 </VirtualHost>
