--- a/default.conf
+++ b/default.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    ServerName capslock.woven.design
+    ServerName localhost
     DocumentRoot "/var/www/html"
   <Directory "/var/www/html">
     AllowOverride All
