--- a/site/blueprints/pages/default.yml
+++ b/site/blueprints/pages/default.yml
@@ -14,3 +14,5 @@ columns:
               - text
               - card
               - link-card
+              - become-member
+              - image
